# aoc2020

./: Cargo.toml  day4.txt
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  maybe_from.rs  render.rs  twod.rs  utils.rs
src/data/4/: 1
