[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Jonas Obrist <jonas.obrist@hennge.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"

[dev-dependencies]
parameterized = "0.2.0"
